feat: 80% completed project

--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
     <title>Fast cheap toggle</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <form>
+        <div class="checkboxContainer">
+          <input type="checkbox" id="fastCheckbox" />
+          <label for="fastCheckbox" id="fastLabel">Fast</label>
+        </div>
+        <div class="checkboxContainer">
+          <input type="checkbox" id="cheapCheckbox" />
+          <label for="cheapCheckbox" id="cheapLabel">Cheap</label>
+        </div>
+        <div class="checkboxContainer">
+          <input type="checkbox" id="goodCheckbox" />
+          <label for="goodCheckbox" id="goodLabel">Good</label>
+        </div>
+      </form>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
